Add swagger docs for APIs for comments
